# AI-Agent-Projects

./: .env_example  .gitignore  Readme.md  course.md  main.py  pyproject.toml  requirements.txt
01 Getting Started/: 02 Gemini3 with Langchain Bootcamp.ipynb
02 Agent Fundamentals/: 01 Langchain Agents Bootcamp.ipynb  01 agent_fundamentals.ipynb  02 agent_fundamentals.ipynb  02 agent_tools_and_configurations.ipynb  03 agent_memory.ipynb  03 agent_short_term_memory.ipynb  03 agent_tools_and_configurations.ipynb  04 agent_long_term_memory.ipynb  04 agent_memory.ipynb  04 agent_tools_and_configurations.ipynb  04-01 agent_short_term_memory.ipynb  04-02 agent_long_term_memory.ipynb  05 agent_streaming.ipynb  05 agent_streaming_and_responses.ipynb  06 agent_middleware_essentials.ipynb  07 agent_guardrails_and_HITL.ipynb  07 agent_guardrails_and_safety.ipynb  08 agent_prompt_and_context_engineering.ipynb  08 agent_prompt_engineering.ipynb
02 Agent Fundamentals/data/: earth_essay.txt
02 Agent Fundamentals/db/: 31_checkpoints.db-shm  31_checkpoints.db-wal  5_streaming_agent.db  5_streaming_agent.db-shm  5_streaming_agent.db-wal  checkpoints.db-shm  checkpoints.db-wal  middleware_agent.db-shm  middleware_agent.db-wal  streaming_agent.db-shm  streaming_agent.db-wal
03 AI Projects/00_getting_started_with_mcp/: 00_setup.md  airbnb_mcp.py
03 AI Projects/00_introduction_to_mcp/: 00_setup.md
03 AI Projects/01_getting_started_with_mcp/: 00_setup.md  airbnb_mcp.py
03 AI Projects/01_hotel_search_with_mcp/: airbnb_mcp.py
03 AI Projects/01_travel_planner_agent/: fix_google_auth.md  google_sheet_analysis.py  test_gemini.py  travel_planner_agent.py
03 AI Projects/02_ai_agents_fastapi/: client.py  server.py
03 AI Projects/02_data_analysis_agent/: google_sheet_analysis.py
03 AI Projects/02_travel_planner_agent/: travel_planner_agent.py
03 AI Projects/03_code_execution_agent/: code_execution_agent.py  e2b_code_sandbox.ipynb
03 AI Projects/06_deploy_agents_with_chat_ui/: Setup.md
04 Real-World Projects/: 04_02_stream_server.py  upload_mysql_db.ipynb
scripts/: agent_utils.py  base_tools.py  mcp_config.json  prompts.py
(+14 files in other folders)
